--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,48 @@
    <swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
   </properties>
 
+  <profiles>
+   <profile>
+    <id>Windows</id>
+    <activation>
+      <os>
+        <name>Windows XP</name>
+        <family>Windows</family>
+        <arch>x86</arch>
+      </os>
+    </activation>
+    <properties>
+     <swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
+    </properties>
+   </profile>
+
+   <profile>
+    <id>Linux 64-bit</id>
+    <activation>
+      <os>
+        <family>Linux</family>
+        <arch>x64</arch>
+      </os>
+    </activation>
+    <properties>
+     <swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
+    </properties>
+   </profile>
+
+   <profile>
+   <id>Linux 32-bit</id>
+    <activation>
+      <os>
+        <family>Linux</family>
+        <arch>i386</arch>
+      </os>
+    </activation>
+    <properties>
+     <swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
+    </properties>
+   </profile>
+  </profiles>
+
   <repositories>
     <repository>
         <id>swt-repo</id>
