--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,28 @@
      <target>1.6</target>
      </configuration>
     </plugin>
+
+    <plugin>
+	 <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+       <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+       </descriptorRefs>
+       <archive>
+        <manifest>
+         <mainClass>SimpleDance</mainClass>
+        </manifest>
+       </archive>
+      </configuration>
+      <executions>
+       <execution>
+        <phase>package</phase>
+        <goals>
+         <goal>single</goal>
+        </goals>
+       </execution>
+      </executions>
+     </plugin>
    </plugins>
   </build>
 
