Fixed architecture specification for Linux 64bit.

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <activation>
       <os>
         <family>Linux</family>
-        <arch>x64</arch>
+        <arch>amd64</arch>
       </os>
     </activation>
     <properties>
