Moved simpledance sources into a real subfolder.

--- a/simpledance/pom.xml
+++ b/simpledance/pom.xml
@@ -10,7 +10,7 @@
 		<groupId>de.sonumina</groupId>
 		<artifactId>simpledance.parent</artifactId>
 		<version>0.10-SNAPSHOT</version>
-		<relativePath>./simpledance.parent</relativePath>
+		<relativePath>../simpledance.parent</relativePath>
 	</parent>
 
 	<name>SimpleDance</name>
