--- a/simpledance.parent/pom.xml
+++ b/simpledance.parent/pom.xml
@@ -7,6 +7,13 @@
 	<version>0.10-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<repositories>
+		<repository>
+			<id>swt-repo</id>
+			<url>https://swt-repo.googlecode.com/svn/repo/</url>
+		</repository>
+	</repositories>
+
 	<modules>
 		<module>../simpledance</module>
 	</modules>
