--- a/simpledance/pom.xml
+++ b/simpledance/pom.xml
@@ -91,9 +91,17 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
+					<compilerId>eclipse</compilerId>
 					<source>1.7</source>
 					<target>1.6</target>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-compiler-eclipse</artifactId>
+						<version>2.3</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<plugin>
