--- a/simpledance/pom.xml
+++ b/simpledance/pom.xml
@@ -109,6 +109,16 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
 			</plugin>
+
+			<plugin>
+				<groupId>com.googlecode.gettext-commons</groupId>
+				<artifactId>gettext-maven-plugin</artifactId>
+				<version>1.2.4</version>
+				<configuration>
+					<poDirectory>${basedir}/src/main/po</poDirectory>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
