Added the keywords that we use for i18n.

--- a/simpledance/pom.xml
+++ b/simpledance/pom.xml
@@ -117,6 +117,7 @@
 				<configuration>
 					<poDirectory>${basedir}/src/main/po</poDirectory>
 					<targetBundle>SimpleDanceBundle</targetBundle>
+					<keywords>-k_ -kN_</keywords>
 				</configuration>
 				<executions>
 					<execution>
