Enable optimization explictly as this will workaround the enum problem.

--- a/simpledance/pom.xml
+++ b/simpledance/pom.xml
@@ -94,6 +94,8 @@
 					<compilerId>eclipse</compilerId>
 					<source>1.7</source>
 					<target>1.6</target>
+					<!-- This avoid problems with the enum -->
+					<optimize>true</optimize>
 				</configuration>
 				<dependencies>
 					<dependency>
