Introduced still empty core module.

--- a/simpledance.parent/pom.xml
+++ b/simpledance.parent/pom.xml
@@ -19,6 +19,7 @@
 	</repositories>
 
 	<modules>
+		<module>../simpledance.core</module>
 		<module>../simpledance</module>
 		<module>../simpledance.linux.amd64</module>
 		<module>../simpledance.linux.i386</module>
