Initial android package.
Use
  mvn package -pl :simpledance.android -am -P Android
in simpledance.parent to actually translate it. Note that the env
variable ANDROID_HOME must be set. Also note that it is only a stub
at the moment.

--- a/simpledance.parent/pom.xml
+++ b/simpledance.parent/pom.xml
@@ -26,4 +26,13 @@
 		<module>../simpledance.win32</module>
 	</modules>
 
+	<profiles>
+		<profile>
+			<id>Android</id>
+			<modules>
+				<module>../simpledance.android</module>
+			</modules>
+		</profile>
+	</profiles>
+
 </project>
