Added Web client experiment with TeaVM.

--- a/simpledance.parent/pom.xml
+++ b/simpledance.parent/pom.xml
@@ -42,6 +42,13 @@
 				<module>../simpledance.android</module>
 			</modules>
 		</profile>
+
+		<profile>
+			<id>Web</id>
+			<modules>
+				<module>../simpledance.web</module>
+			</modules>
+		</profile>
 	</profiles>
 
 </project>
